Bug fix - issue of image overflow fixed on smaller device

--- a/src/homepage/banner/style.scss
+++ b/src/homepage/banner/style.scss
@@ -154,3 +154,10 @@
     }
   }
 }
+@media (max-width: 320px) {
+  .banner {
+    &__heading span img {
+      left: 0;
+    }
+  }
+}
